# raptor

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake  Dependencies.cmake  Warnings.cmake
design/: 0001-cmake-project-skeleton-directory-layout.md  0002-cmake-configurebuildtest-presets-per-toolchain.md  0003-dependency-management-via-fetchcontent.md  0004-clang-format-config-and-format-check-target.md  0005-clang-tidy-configuration-and-lint-check.md  0006-github-actions-ci-matrix-across-all-toolchains.md  0007-first-executable-ctest-integration-and-smoke-test.md  0008-error-handling-conventions-and-result-type.md  0009-logging-interface-and-spdlog-adapter.md  0010-clocktime-interface-with-system-and-fake-clocks.md  0011-filesystem-interface-and-adapter.md  0012-byte-buffer-and-span-utilities.md  0013-bencode-value-model.md  0014-bencode-decoder.md  0015-bencode-encoder.md  0016-sha-1-hashing-interface-and-adapter.md  0017-metainfo-parsing-—-single-file-torrents.md  0018-metainfo-parsing-—-multi-file-torrents-and-info-hash.md  0019-piece-layout-model.md  0020-async-io-runtime-and-network-interface.md  0021-tcp-connection-adapter-and-connection-helpers.md  0022-http-client-interface-for-tracker-announces.md  0023-tracker-announce-request-builder.md  0024-tracker-response-parser.md  0025-tracker-client-orchestration-and-announce-loop.md  0026-peer-message-model-and-deserialization.md  0027-handshake-encodedecode.md  0028-streaming-message-framer.md  0029-peer-connection-state-machine.md  0030-bitfield-and-availability-tracking.md  0031-piece-picker-interface-strategy-abstraction.md  0032-block-request-tracking-in-flight-timeouts.md  0033-piece-assembly-and-hash-verification.md  0034-storage-and-file-writer-single-+-multi-file.md  0035-sequential-scheduler.md  0036-reverse-sequential-scheduler.md  0037-random-scheduler.md  0038-rarest-first-availability-aware-scheduler.md  0039-optimized-default-scheduler.md  0040-endgame-mode.md  (+16 more)
include/raptor/: version.hpp
include/raptor/domain/: error.hpp
include/raptor/interfaces/: FileHandle.hpp  FileSystem.hpp  clock.hpp  file_handle.hpp  file_system.hpp  logger.hpp  timer.hpp
src/application/: Version.cpp  placeholder.cpp  version.cpp
src/cli/: main.cpp
src/domain/: error.cpp
src/infrastructure/: SpdlogLogger.cpp  SpdlogLogger.hpp  StdFileSystem.cpp  StdFileSystem.hpp  SystemClock.hpp  spdlog_logger.cpp  spdlog_logger.hpp  std_file_system.cpp  std_file_system.hpp  system_clock.hpp
src/interfaces/: logger.cpp
tests/: CMakeLists.txt  ClockTest.cpp  ErrorTest.cpp  FileSystemTest.cpp  LoggerTest.cpp  SmokeTest.cpp  clock_test.cpp  error_test.cpp  file_system_test.cpp  logger_test.cpp  smoke_test.cpp
tests/support/: FakeClock.hpp  InMemoryFileSystem.hpp  fake_clock.hpp  in_memory_file_system.hpp
